# saddle-animation-text-animation

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BRhg8Sj-.js  Bw72P_hz.js  D0jZJRJU.js  DQRemLhq.js  TDt-hATW.js
_app/immutable/entry/: app.DB6Mmisu.js  start.C32Ezonf.js
_app/immutable/nodes/: 0.D4aR_vBD.js  1.BJD0gte1.js  2.CXkt1WbN.js  3.DaViXlDD.js  4.CHoGYJOY.js
demo/basic/: index.html
demo/dialogue_box/: index.html
demo/lab/: index.html
demo/layered_effects/: index.html
demo/reduced_motion/: index.html
demo/stress/: index.html
demo/text2d_world_label/: index.html
demo/typewriter/: index.html
demos/basic/: index.html
demos/dialogue_box/: index.html
demos/layered_effects/: index.html
demos/reduced_motion/: index.html
demos/stress/: index.html
demos/text2d_world_label/: index.html
demos/typewriter/: index.html
docs/: architecture.md  configuration.md  debugging.md  performance.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
docs/debugging/: __data.json  index.html
docs/debugging.md/: index.html
docs/performance/: __data.json  index.html
docs/performance.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/dialogue_box/: Cargo.toml
examples/dialogue_box/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/layered_effects/: Cargo.toml
examples/layered_effects/src/: main.rs
examples/reduced_motion/: Cargo.toml
examples/reduced_motion/src/: main.rs
examples/stress/: Cargo.toml
examples/stress/src/: main.rs
examples/text2d_world_label/: Cargo.toml
examples/text2d_world_label/src/: main.rs
examples/typewriter/: Cargo.toml
examples/typewriter/src/: main.rs
src/: components.rs  config.rs  effect.rs  effect_tests.rs  glyph_cache.rs  glyph_cache_tests.rs  lib.rs  markup.rs  markup_tests.rs  messages.rs  systems.rs  systems_tests.rs
tests/: integration.rs
