[package]
name = "saddle-animation-text-animation"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-animation-text-animation"
license = "MIT-0"
description = "Animated text effects for Bevy UI and world-space text"

[dependencies]
bevy = { version = "0.18", features = ["serialize", "debug"] }
unicode-segmentation = "1.13"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
