[package]
name = "saddle-animation-text-animation-example-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-animation-text-animation = { workspace = true }
saddle-animation-text-animation-example-common = { path = "../common" }
saddle-pane = { workspace = true }

[lints]
workspace = true
