[package]
name = "saddle-animation-text-animation-example-text2d-world-label"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-animation-text-animation = { workspace = true }
saddle-animation-text-animation-example-common = { path = "../common" }

[lints]
workspace = true
